--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: ensure locale is available
   locale_gen: name={{ item }} state=present
-  with_items: {{ locales }}
+  with_items: locales
